--- a/TV-Show.html
+++ b/TV-Show.html
@@ -327,7 +327,9 @@
               </h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">User Rating: 10.0</span>
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 8.9</span
+                  >
                 </div>
                 <span class="movie-year-text">2023</span>
               </div>
@@ -407,10 +409,12 @@
                 alt="Movie 2 Poster"
                 class="movie-poster"
               />
-              <h2 class="movie-title">Forest Gump</h2>
+              <h2 class="movie-title">Loki</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">User Rating: 10.0</span>
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 8.9</span
+                  >
                 </div>
                 <span class="movie-year-text">1994</span>
               </div>
@@ -442,10 +446,12 @@
                 alt="Movie 2 Poster"
                 class="movie-poster"
               />
-              <h2 class="movie-title">The Shawshank Redemption</h2>
+              <h2 class="movie-title">Wanda Vision</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">User Rating: 10.0</span>
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 8.9</span
+                  >
                 </div>
                 <span class="movie-year-text">1994</span>
               </div>
@@ -477,10 +483,12 @@
                 alt="Movie 2 Poster"
                 class="movie-poster"
               />
-              <h2 class="movie-title">The Green Mile</h2>
+              <h2 class="movie-title">Hawkey</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">User Rating: 9.9</span>
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 8.9</span
+                  >
                 </div>
                 <span class="movie-year-text">1999</span>
               </div>
@@ -512,10 +520,12 @@
                 alt="Movie 2 Poster"
                 class="movie-poster"
               />
-              <h2 class="movie-title">Cast Away</h2>
+              <h2 class="movie-title">The Falcon and the Winter Solider</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">IMDB Score: 9.5</span>
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 8.9</span
+                  >
                 </div>
                 <span class="movie-year-text">2000</span>
               </div>
@@ -547,10 +557,12 @@
                 alt="Movie 2 Poster"
                 class="movie-poster"
               />
-              <h2 class="movie-title">The Truman Show</h2>
+              <h2 class="movie-title">Moon Knight</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">User Rating: 10.0</span>
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 8.9</span
+                  >
                 </div>
                 <span class="movie-year-text">1998</span>
               </div>
@@ -582,10 +594,12 @@
                 alt="Movie 2 Poster"
                 class="movie-poster"
               />
-              <h2 class="movie-title">Identity</h2>
+              <h2 class="movie-title">Ms. Marvel</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">User Rating: 9.7</span>
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 8.9</span
+                  >
                 </div>
                 <span class="movie-year-text">2003</span>
               </div>
@@ -617,10 +631,12 @@
                 alt="Movie 2 Poster"
                 class="movie-poster"
               />
-              <h2 class="movie-title">The Imitation Game</h2>
+              <h2 class="movie-title">Daredevil</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">User Rating: 9.8</span>
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 8.9</span
+                  >
                 </div>
                 <span class="movie-year-text">2014</span>
               </div>
@@ -652,10 +668,12 @@
                 alt="Movie 2 Poster"
                 class="movie-poster"
               />
-              <h2 class="movie-title">Room 1408</h2>
+              <h2 class="movie-title">Agents of SHIELD</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">User Rating: 9.0</span>
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 8.9</span
+                  >
                 </div>
                 <span class="movie-year-text">2007</span>
               </div>
@@ -687,10 +705,12 @@
                 alt="Movie 2 Poster"
                 class="movie-poster"
               />
-              <h2 class="movie-title">The Mist</h2>
+              <h2 class="movie-title">Punisher</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">User Rating: 9.0</span>
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 8.9</span
+                  >
                 </div>
                 <span class="movie-year-text">2007</span>
               </div>
@@ -722,10 +742,12 @@
                 alt="Movie 2 Poster"
                 class="movie-poster"
               />
-              <h2 class="movie-title">Blue Beetle</h2>
+              <h2 class="movie-title">Iron Fist</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">User Rating: 9.3</span>
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 8.9</span
+                  >
                 </div>
                 <span class="movie-year-text">2023</span>
               </div>
@@ -757,10 +779,12 @@
                 alt="Movie 2 Poster"
                 class="movie-poster"
               />
-              <h2 class="movie-title">The Ruins</h2>
+              <h2 class="movie-title">Arrow</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">User Rating: 8.3</span>
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 8.9</span
+                  >
                 </div>
                 <span class="movie-year-text">2008</span>
               </div>
@@ -792,10 +816,12 @@
                 alt="Movie 2 Poster"
                 class="movie-poster"
               />
-              <h2 class="movie-title">Armageddon</h2>
+              <h2 class="movie-title">The Flash</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">User Rating: 8.8</span>
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 8.9</span
+                  >
                 </div>
                 <span class="movie-year-text">1998</span>
               </div>
@@ -830,7 +856,9 @@
               <h2 class="movie-title">Haunted Mansion</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">User Rating: 6.9</span>
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 8.9</span
+                  >
                 </div>
                 <span class="movie-year-text">2023</span>
               </div>
@@ -862,10 +890,12 @@
                 alt="Movie 2 Poster"
                 class="movie-poster"
               />
-              <h2 class="movie-title">The Girl Next Door</h2>
+              <h2 class="movie-title">Supergirl</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">User Rating: 9.3</span>
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 8.9</span
+                  >
                 </div>
                 <span class="movie-year-text">2004</span>
               </div>
@@ -897,10 +927,13 @@
                 alt="Movie 2 Poster"
                 class="movie-poster"
               />
-              <h2 class="movie-title">From Dusk Till Dawn</h2>
+              <h2 class="movie-title">Constantine</h2>
               <div class="movie-rating">
+                <
                 <div class="ratings-container">
-                  <span class="movie-rating-text">User Rating: 8.5</span>
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 8.9</span
+                  >
                 </div>
                 <span class="movie-year-text">1996</span>
               </div>
@@ -932,10 +965,12 @@
                 alt="Movie 2 Poster"
                 class="movie-poster"
               />
-              <h2 class="movie-title">The Rock</h2>
+              <h2 class="movie-title">Black Lightning</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">User Rating: 9.4</span>
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 8.9</span
+                  >
                 </div>
                 <span class="movie-year-text">1996</span>
               </div>
@@ -967,10 +1002,12 @@
                 alt="Movie 2 Poster"
                 class="movie-poster"
               />
-              <h2 class="movie-title">I See You</h2>
+              <h2 class="movie-title">Lucifer</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">User Rating: 8.5</span>
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 8.9</span
+                  >
                 </div>
                 <span class="movie-year-text">2019</span>
               </div>
@@ -1002,10 +1039,12 @@
                 alt="Movie 2 Poster"
                 class="movie-poster"
               />
-              <h2 class="movie-title">Memento</h2>
+              <h2 class="movie-title">Supernatural</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">User Rating: 8.9</span>
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 8.9</span
+                  >
                 </div>
                 <span class="movie-year-text">2000</span>
               </div>
@@ -1037,10 +1076,12 @@
                 alt="Movie 2 Poster"
                 class="movie-poster"
               />
-              <h2 class="movie-title">The Others</h2>
+              <h2 class="movie-title">The 100</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">User Rating: 7.5</span>
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 8.9</span
+                  >
                 </div>
                 <span class="movie-year-text">2001</span>
               </div>
@@ -1072,10 +1113,12 @@
                 alt="Movie 2 Poster"
                 class="movie-poster"
               />
-              <h2 class="movie-title">Apollo 13</h2>
+              <h2 class="movie-title">Smallvile</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">User Rating: TBA</span>
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 8.9</span
+                  >
                 </div>
                 <span class="movie-year-text">1995</span>
               </div>
