--- a/Anime.html
+++ b/Anime.html
@@ -620,6 +620,42 @@
           <div class="movie-item">
             <div class="movie-content">
               <img
+                src="https://image.tmdb.org/t/p/original/9RQhVb3r3mCMqYVhLoCu4EvuipP.jpg"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">Avatar: The Last Airbender</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 9.9</span
+                  >
+                </div>
+                <span class="movie-year-text">2005</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
                 src="https://image.tmdb.org/t/p/original/jsYTctFnK8ewomnUgcwhmsTkOum.jpg"
                 class="movie-poster"
               />
@@ -627,7 +663,7 @@
               <div class="movie-rating">
                 <div class="ratings-container">
                   <span class="movie-rating-text"
-                    ><img src="./images/IMDb_logo.png" /> TBA</span
+                    ><img src="./images/IMDb_logo.png" /> 9.9</span
                   >
                 </div>
                 <span class="movie-year-text">2009</span>
@@ -667,6 +703,42 @@
                   >
                 </div>
                 <span class="movie-year-text">2013</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
+                src="https://image.tmdb.org/t/p/original/3c5BIEfAhTCWrIi4C8WMuwOl6bX.jpg"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">Akame ga Kill!</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 9.8</span
+                  >
+                </div>
+                <span class="movie-year-text">2014</span>
               </div>
               <div class="action-circle">
                 <a href="#" class="icon AddFavorite">
@@ -908,17 +980,17 @@
           <div class="movie-item">
             <div class="movie-content">
               <img
-                src="https://image.tmdb.org/t/p/original/snMMS7crJjBr9FUeBjSbSIzMUXx.jpg"
+                src="https://image.tmdb.org/t/p/original/3kTFL3PAeTyS8gGZAh0iYG6NNjt.jpg"
                 class="movie-poster"
               />
-              <h2 class="movie-title">SPY x FAMILY</h2>
+              <h2 class="movie-title">Wind Breaker</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
                   <span class="movie-rating-text"
-                    ><img src="./images/IMDb_logo.png" /> 9.3</span
+                    ><img src="./images/IMDb_logo.png" /> 9.5</span
                   >
                 </div>
-                <span class="movie-year-text">2022</span>
+                <span class="movie-year-text">2024</span>
               </div>
               <div class="action-circle">
                 <a href="#" class="icon AddFavorite">
@@ -944,17 +1016,17 @@
           <div class="movie-item">
             <div class="movie-content">
               <img
-                src="https://image.tmdb.org/t/p/original/3kTFL3PAeTyS8gGZAh0iYG6NNjt.jpg"
+                src="https://image.tmdb.org/t/p/original/snMMS7crJjBr9FUeBjSbSIzMUXx.jpg"
                 class="movie-poster"
               />
-              <h2 class="movie-title">Wind Breaker</h2>
+              <h2 class="movie-title">SPY x FAMILY</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
                   <span class="movie-rating-text"
-                    ><img src="./images/IMDb_logo.png" /> 9.0</span
+                    ><img src="./images/IMDb_logo.png" /> 9.3</span
                   >
                 </div>
-                <span class="movie-year-text">2024</span>
+                <span class="movie-year-text">2022</span>
               </div>
               <div class="action-circle">
                 <a href="#" class="icon AddFavorite">
@@ -1095,10 +1167,46 @@
               <div class="movie-rating">
                 <div class="ratings-container">
                   <span class="movie-rating-text"
-                    ><img src="./images/IMDb_logo.png" /> 8.9</span
+                    ><img src="./images/IMDb_logo.png" /> 9.0</span
                   >
                 </div>
                 <span class="movie-year-text">2016</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
+                src="https://image.tmdb.org/t/p/original/l83E6WJowxAsCyZbHYaVQkgvIbZ.jpg"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">Pokémon</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 9.0</span
+                  >
+                </div>
+                <span class="movie-year-text">1997</span>
               </div>
               <div class="action-circle">
                 <a href="#" class="icon AddFavorite">
@@ -1384,6 +1492,42 @@
                 <div class="ratings-container">
                   <span class="movie-rating-text"
                     ><img src="./images/IMDb_logo.png" /> 8.0</span
+                  >
+                </div>
+                <span class="movie-year-text">2017</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
+                src="https://image.tmdb.org/t/p/original/82cwtPfmA3Ao66UoUTCxgYyqfhg.jpg"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">Castlevania</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 6.0</span
                   >
                 </div>
                 <span class="movie-year-text">2017</span>
